# hydra

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  tarpaulin-report.json
.claude/: plan.md
.github/workflows/: ci.yml
benches/: data_processing.rs  input_handling.rs  rendering.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_diff_numstat.rs  fuzz_extract_message.rs  fuzz_jsonl_parsing.rs  fuzz_normalize_capture.rs
scripts/: install.sh
src/: app.rs  backend.rs  event.rs  lib.rs  logs.rs  main.rs  manifest.rs  models.rs  session.rs  state.rs  tmux.rs  tmux_control.rs  ui.rs
src/agent/: claude.rs  codex.rs  gemini.rs  mod.rs
src/backend/: message_runtime.rs  preview_runtime.rs  session_runtime.rs  state.rs
src/snapshots/: hydra__ui__tests__agent_select_second_highlighted.snap  hydra__ui__tests__attached_mode.snap  hydra__ui__tests__browse_mode_copy_mode_help_bar.snap  hydra__ui__tests__browse_mode_empty.snap  hydra__ui__tests__browse_mode_with_all_statuses.snap  hydra__ui__tests__browse_mode_with_deletion_only_diff.snap  hydra__ui__tests__browse_mode_with_last_messages.snap  hydra__ui__tests__browse_mode_with_long_last_message_truncated.snap  hydra__ui__tests__browse_mode_with_sessions.snap  hydra__ui__tests__browse_mode_with_stats.snap  hydra__ui__tests__browse_mode_with_task_elapsed.snap  hydra__ui__tests__compose_mode.snap  hydra__ui__tests__confirm_delete_modal.snap  hydra__ui__tests__confirm_delete_no_sessions.snap  hydra__ui__tests__conversation_basic.snap  hydra__ui__tests__conversation_empty.snap  hydra__ui__tests__conversation_tool_heavy.snap  hydra__ui__tests__conversation_with_unparsed_logs.snap  hydra__ui__tests__new_session_agent_modal.snap  hydra__ui__tests__new_session_name_modal.snap  hydra__ui__tests__preview_scrolling_renders.snap  hydra__ui__tests__status_message_displayed.snap
src/system/: git.rs  process.rs
src/ui/: conversation.rs  diff.rs  help.rs  modals.rs  preview.rs  sidebar.rs  state.rs  stats.rs
src/ui/snapshots/: hydra__ui__conversation__tests__conversation_basic.snap  hydra__ui__conversation__tests__conversation_empty.snap  hydra__ui__conversation__tests__conversation_tool_heavy.snap  hydra__ui__conversation__tests__conversation_with_unparsed_logs.snap
tests/: cli_tests.rs
