[package]
name = "hydra"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
ansi-to-tui = "8"
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6"
futures = "0.3"
hex = "0.4"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.38.2"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1"
assert_cmd = "2"
predicates = "3"
proptest = "1"
tempfile = "3"

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "input_handling"
harness = false

[[bench]]
name = "data_processing"
harness = false
